# fcitx

./: ChangeLog  FAQ.md  INSTALL.md  KimpanelIntroduction.md  Makefile.am  ProjectHome.md  README.md  autogen.sh  configure.in  doc.md  download.md  issue.md  source.md
data/: Makefile.am  config  config.desc  getdescpo  module.desc  profile.desc  skin.desc  table.desc
data/table/: Makefile.am  bingcan.conf  cangjie.conf  db.conf  erbi.conf  wanfeng.conf  wbpy.conf  wbx.conf  zrm.conf
debian/: changelog  control  rules
po/: Makevars  POTFILES.in  fcitx.pot  zh_CN.po
skin/: Makefile.am
skin/classic/: Makefile.am  fcitx_skin.conf
skin/dark/: Makefile.am  fcitx_skin.conf
skin/default/: Makefile.am  fcitx_skin.conf
skin/snow/: Makefile.am  fcitx_skin.conf
src/core/: IC.c  Makefile.am  MyErrorsHandlers.c  fcitx.h  fcitx.pc.in  im.h  ime.c  ime.h  internalVersion.c  main.c  xim.c
src/fcitx-config/: Makefile.am  configfile.c  configfile.h  cutils.c  cutils.h  fcitx-config.c  fcitx-config.h  fcitx-config.pc.in  hotkey.c  hotkey.h  profile.c  profile.h  sprintf.c  sprintf.h  xdg.c  xdg.h
src/im/extra/: Makefile.am  extra.c  extra.h
src/im/pinyin/: Makefile.am  py.c  py.h  pyParser.h  sp.c  sp.h
src/im/qw/: Makefile.am  qw.c  qw.h
src/im/special/: AutoEng.c  Makefile.am  QuickPhrase.c  punc.c  vk.c  vk.h
src/im/table/: Makefile.am  table.c  table.h  tableconfig.c
src/interface/: DBus.c  DBus.h  ImeRemote.c  Makefile.am
src/lib/fcitx/: ui.h
src/tools/: Makefile.am  configfile.c  profile.c  tools.c  tools.h  utf8.c  utf8.h  util.c  util.h  xdg.c  xdg.h
src/ui/: AboutWindow.c  AboutWindow.h  InputWindow.c  InputWindow.h  MainWindow.c  MainWindow.h  Makefile.am  MenuWindow.c  MenuWindow.h  MessageWindow.c  MessageWindow.h  TrayWindow.c  TrayWindow.h  about.c  about.h  font.c  font.h  skin.c  skin.h  skinconfig.c  tray.c  tray.h  ui.c  ui.h
src/xpm/: vk.xpm
tools/: Makefile.am  client-test.c  fcitx-remote.c  mb2org.c  pyTools.c  pyTools.h  readPYBase.c  readPYMB.c  txt2mb.c
xpm/default/: Makefile.am  fcitx_skin.conf
