defaultdir = $(pkgdatadir)/skin/default
default_DATA = active.png  bing.png chnpunc.png  engpunc.png  er.png  fcitx_skin.conf  half.png \
			   input.png  legend.png  nolegend.png  qu.png  vk.png wu.png zi.png \
			   bar.png cang.png  cn.png en.png  fan.png  full.png inactive.png  jian.png logo.png \
			   ma.png novk.png shuang.png wan.png zhi.png
EXTRA_DIST = $(default_DATA)
